--- a/maysternyadurnits.html
+++ b/maysternyadurnits.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="img/dom.png" sizes="32x32">
         <title>Майстерня дурниць</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link rel="stylesheet" href="maysternyadurnits.css">
+        <link rel="stylesheet" href="plays.css">
     </head>
     <body>
         <header>
