--- a/maysternyadurnits.html
+++ b/maysternyadurnits.html
@@ -64,7 +64,7 @@
                     <p>Перший міністр - Дем'ян Лінник</p>
                     <p>Джек - Олег Ярошенко</p>
                     <p>Джим - Олексій Меньшиков</p>
-                    <p>Сюзанна - Наталя Дроботун</p>
+                    <p>Сюзанна - Наталія Дроботун</p>
                     <p>Опікунка - Тетяна Єрохіна</p>
             </section>
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
