--- a/index.html
+++ b/index.html
@@ -289,25 +289,31 @@
             </section>
             <section id="media">
                 <h2>Медіа</h2>
+                <div class="media">
                 <div class="row row-cols-1 row-cols-md-2">
                     <div class="col mb-4">
                         <div class="card">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="img/npaper.jpeg" class="card-img-top" alt="тексти">
                             <div class="card-body">
-                                <h5 class="card-title">Ми в медіа. Тексти</h5>
-                                <p class="card-text">Тексти про "Domus"</p>
+                                <a href="text.html" target="_blank">
+                                    <h3 class="card-title">Ми в медіа. Тексти</h3>
+                                    <p class="card-text">Тексти про "Domus"</p>
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div class="col mb-4">
                         <div class="card">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="img/laptop.jpeg" class="card-img-top" alt="відео">
                             <div class="card-body">
-                                <h5 class="card-title">Ми в медіа. Відео</h5>
-                                <p class="card-text">Відеоматеріали про "Domus"</p>
+                                <a href="video.html" target="_blank">
+                                    <h3 class="card-title">Ми в медіа. Відео</h3>
+                                    <p class="card-text">Відеоматеріали про "Domus"</p>
+                                </a>
                             </div>
                         </div>
                     </div>
+                </div>
                 </div>
             </section>
             <section id="joinus">
