--- a/hayzhivebushon.html
+++ b/hayzhivebushon.html
@@ -14,7 +14,8 @@
                 <div>
                     <nav class="logo-block"></nav>
                 </div>
-                <div class="logo">Театр "Domus"</div>
+                <div class="logo">
+                <a href="index.html" target="_blank">Театр "Domus"</a></div>
             </nav>
             <nav>
                 <div class="menu-items" style="display: flex;">
