--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 <div>
                     <nav class="logo-block"></nav>
                 </div>
-                <div class="logo">Театр "Domus"</div>
+                <div class="logo">
+                <a href="index.html">Театр "Domus"</a></div>
             </nav>
             <nav class="navbar">
                 <nav class="navbar navbar-expand-lg navbar-light">
@@ -237,7 +238,9 @@
                 </div>
             </section>
             <section id="plays">
-                <h2>Вистави</h2>
+            <div class="vystavy">
+                <a href="vystavy.html" target="_blank"><h2>Вистави</h2></a>
+                </div>
                 <div class="plays">
                     <div class="row row-cols-1 row-cols-md-2">
                         <div class="col mb-4">
