--- a/text.html
+++ b/text.html
@@ -14,7 +14,8 @@
                 <div>
                     <nav class="logo-block"></nav>
                 </div>
-                <div class="logo">Театр "Domus"</div>
+                <div class="logo">
+                <a href="index.html" target="_blank">Театр "Domus"</a></div>
             </nav>
             <nav class="navbar">
                 <nav class="navbar navbar-expand-lg navbar-light">
