--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="img/dom.png" sizes="32x32">
         <title>Theatre Domus</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <header>
@@ -322,7 +322,7 @@
             <section id="joinus">
                 <h2>Приєднатися</h2>
                 <div class="joinus">
-                    <h3>Надсилайте свої контакти</h3>
+                    <h4>Хочете доєднатись? Лишайте контакти!</h4>
                     <form class="form-inline">
                         <input class="form-control mr-sm-2" placeholder="Ім'я та номер мобільного">
                         <button class="btn btn-outline-light">
