--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                     <nav class="logo-block"></nav>
                 </div>
                 <div class="logo">
-                <a href="index.html">Театр "Domus"</a></div>
+                    <a href="index.html">Театр "Domus"</a>
+                </div>
             </nav>
             <nav class="navbar">
                 <nav class="navbar navbar-expand-lg navbar-light">
@@ -85,19 +86,13 @@
         </header>
         <main>
             <section id="aboutus">
-                <h2>Про нас</h2>
-                <div class="aboutus">
-                    <div class="row row-cols-1 row-cols-md-2">
-                        <div class="col mb-4">
-                            <div class="card">
-                                <img src="img/groups.jpeg" class="card-img-top" alt="спілка2">
-                                <img src="img/group.jpeg" class="card-img-top" alt="спілка">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="block-about">
-                        <p>Театр "Domus" заснувала кримчанка Наталія Меньшикова за допомогою багатьох людей, для яких розвиток мистецтва має велике значення. Перебуваючи у театрі, можна зануритися у чуже життя, а можна під іншим кутом побачити власне, заглянути в очі самому собі. Це й буде найголовніше диво театру, яке одні люди роблять для інших. Domus починав своє життя на Сихові і був там першим театром, але згодом переїхав у Палац Хоткевича у центрі. Відтепер у Львові буде не просто цікавий театр, це буде дім, в який зможе прийти кожен бажаючий!</p>
-                        <p>Дізнайтесь про нас більше:</p>
+            <h2>Про нас</h2>
+            <div class="aboutus">
+                <div class="card mb-3">
+                    <img src="img/group.jpeg">
+                    <div class="card-body">
+                        <p class="card-text" align="justify">Театр "Domus" заснувала кримчанка Наталія Меньшикова за допомогою багатьох людей, для яких розвиток мистецтва має велике значення. Перебуваючи у театрі, можна зануритися у чуже життя, а можна під іншим кутом побачити власне, заглянути в очі самому собі. Це й буде найголовніше диво театру, яке одні люди роблять для інших. Domus починав своє життя на Сихові і був там першим театром, але згодом переїхав у Палац Хоткевича у центрі. Відтепер у Львові буде не просто цікавий театр, це буде дім, в який зможе прийти кожен бажаючий!</p>
+                        <p>Дізнайтесь про нас більше в наших соціальних мережах:</p>
                         <div class="social-pages">
                             <a href="https://www.facebook.com/teatrdomus/">
                                 <img src="img/facebook.png" alt="facebook" width="30">
@@ -110,6 +105,7 @@
                             </a>
                         </div>
                     </div>
+                </div>    
             </section>
             <section id="news">
                 <h2>Новини</h2>
@@ -123,7 +119,7 @@
                                         <a href="https://www.facebook.com/teatrdomus" target="_blank">
                                             <h3>"Звіяні Голлівудом"</h3>
                                         </a>
-                                        <p class="card-text">Заперечення – Гнів – Торг – Депресія – Прийняття – Банани з арахісом – Всесвітній успіх. Три генії творять багатомільйонне диво за кілька днів. Історія народження культового фільму «Звіяні Вітром» у виконанні Театру Домус! Це підтверджений наукою випадок, коли мрії і наполегливості було достатньо, щоб заробити майже пів мільйона доларів.</p>
+                                        <p class="card-text" align="justify">Заперечення – Гнів – Торг – Депресія – Прийняття – Банани з арахісом – Всесвітній успіх. Три генії творять багатомільйонне диво за кілька днів. Історія народження культового фільму «Звіяні Вітром» у виконанні Театру Домус! Це підтверджений наукою випадок, коли мрії і наполегливості було достатньо, щоб заробити майже пів мільйона доларів.</p>
                                     </div>
                                 </div>
                             </div>
@@ -134,7 +130,7 @@
                                         <a href="https://soundcloud.com/user-2462259/domus?fbclid=IwAR3cWlRI-2j1SMhQ7wBmFjNl9iwJNoVmlCmkqx2KSQxau_36yxWrOybolG0" target="_blank">
                                             <h3>"Domus" завітав на Радіо "Перше"</h3>
                                         </a>
-                                        <p class="card-text">Режисерка театру з акторами завітали на авторську програму Романа Гурського "#ШоууГури". Весела і надихаюча розмова дозволить вам почути декілька порад щодо акторства, особливо під час таких екстремальних часів як карантин. Про акторські будні, репетиції та подальші плани театру можна послухати вже зараз.</p>
+                                        <p class="card-text" align="justify">Режисерка театру з акторами завітали на авторську програму Романа Гурського "#ШоууГури". Весела і надихаюча розмова дозволить вам почути декілька порад щодо акторства, особливо під час таких екстремальних часів як карантин. Про акторські будні, репетиції та подальші плани театру можна послухати вже зараз.</p>
                                     </div>
                                 </div>
                             </div>
@@ -230,7 +226,7 @@
                             <div class="col-md-8">
                                 <div class="card-body">
                                     <h3 class="title">Наталія Меньшикова</h3>
-                                    <p class="card-text">Наталія Меньшикова народилася в Криму, театральним мистецтвом займається з юних літ. У Сімферополі вона працювала режисером, мала свій театральний центр. Чотири роки тому була змушена залишити Крим і переїхати до Львова. Тут знайшла однодумців і створила аматорсько-професійний театр «Domus», що в перекладі з латинської означає «дім». За чотири роки роботи в театрі було створено близько 20 вистав, в яких прийняло участь до 30 різних акторів. Ідея створення театру виникла з бажання поєднати переселенців та львів’ян, професіоналів та аматорів.</p>
+                                    <p class="card-text" align="justify">Наталія Меньшикова народилася в Криму, театральним мистецтвом займається з юних літ. У Сімферополі вона працювала режисером, мала свій театральний центр. Чотири роки тому була змушена залишити Крим і переїхати до Львова. Тут знайшла однодумців і створила аматорсько-професійний театр «Domus», що в перекладі з латинської означає «дім». За чотири роки роботи в театрі було створено близько 20 вистав, в яких прийняло участь до 30 різних акторів. Ідея створення театру виникла з бажання поєднати переселенців та львів’ян, професіоналів та аматорів.</p>
                                 </div>
                             </div>
                         </div>
@@ -238,8 +234,10 @@
                 </div>
             </section>
             <section id="plays">
-            <div class="vystavy">
-                <a href="vystavy.html" target="_blank"><h2>Вистави</h2></a>
+                <div class="vystavy">
+                    <a href="vystavy.html" target="_blank">
+                        <h2>Вистави</h2>
+                    </a>
                 </div>
                 <div class="plays">
                     <div class="row row-cols-1 row-cols-md-2">
@@ -293,59 +291,66 @@
             <section id="media">
                 <h2>Медіа</h2>
                 <div class="media">
-                <div class="row row-cols-1 row-cols-md-2">
-                    <div class="col mb-4">
-                        <div class="card">
-                            <img src="img/npaper.jpeg" class="card-img-top" alt="тексти">
-                            <div class="card-body">
-                                <a href="text.html" target="_blank">
-                                    <h3 class="card-title">Ми в медіа. Тексти</h3>
-                                    <p class="card-text">Тексти про "Domus"</p>
-                                </a>
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div class="col mb-4">
+                            <div class="card">
+                                <img src="img/npaper.jpeg" class="card-img-top" alt="тексти">
+                                <div class="card-body">
+                                    <a href="text.html" target="_blank">
+                                        <h3 class="card-title">Ми в медіа. Тексти</h3>
+                                        <p class="card-text">Тексти про "Domus"</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card">
+                                <img src="img/laptop.jpeg" class="card-img-top" alt="відео">
+                                <div class="card-body">
+                                    <a href="video.html" target="_blank">
+                                        <h3 class="card-title">Ми в медіа. Відео</h3>
+                                        <p class="card-text">Відеоматеріали про "Domus"</p>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col mb-4">
-                        <div class="card">
-                            <img src="img/laptop.jpeg" class="card-img-top" alt="відео">
-                            <div class="card-body">
-                                <a href="video.html" target="_blank">
-                                    <h3 class="card-title">Ми в медіа. Відео</h3>
-                                    <p class="card-text">Відеоматеріали про "Domus"</p>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 </div>
             </section>
             <section id="joinus">
                 <h2>Приєднатися</h2>
                 <div class="joinus">
                     <h4>Хочете доєднатись? Лишайте контакти!</h4>
-                    <form class="form-inline">
+                    <form class="form-inline" form action="telegram.php" method="POST">
                         <input class="form-control mr-sm-2" placeholder="Ім'я та номер мобільного">
                         <button class="btn btn-outline-light">
-                            <img src="img/masks.png" alt="Театр" width="15" style="vertical-align: middle">Вперед</button>
+                            <img src="img/masks.png" alt="Театр" width="15" style="vertical-align: middle">Вперед
+                        </button>
                     </form>
                 </div>
             </section>
             <section id="contactus">
                 <h2>Контакти</h2>
-                <div class="contactus">
-                    <div>
-                        <h3>
-                            <i>Львів, вул. Кушевича, 1</i>
-                        </h3>
-                        <h3>
-                            <i>095 930 1404</i>
-                        </h3>
-                        <img src="img/white.jpeg" alt="white" width="250">
+                <div class="contactus"></div>
+                <div class="row row-cols-1 row-cols-md-2">
+                    <div class="col mb-4">
+                        <div class="card border-light">
+                            <div>
+                                <h4>
+                                    Львів, вул. Кушевича, 1
+                                </4>
+                                <h4>
+                                    095 930 1404
+                                </h4>
+                                <img src="img/white.jpeg" alt="white" width="300">
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <img src="img/map.jpeg" alt="map" width="500">
+                    <div class="col">
+                        <div class="card border-light">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2572.493118392924!2d24.025492209201108!3d49.85198101863355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add0bdc8cac17%3A0x100ce23e84df4f8!2sHnat%20Khotkevych%20Palace%20of%20Culture!5e0!3m2!1sru!2sua!4v1605117874228!5m2!1sru!2sua" width="533" height="375" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        </div>
                     </div>
-                </div>
             </section>
         </main>
         <footer>
