--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <h2>Приєднатися</h2>
                 <div class="joinus">
                     <h4>Хочете доєднатись? Лишайте контакти!</h4>
-                    <form class="form-inline" form action="telegram.php" method="POST">
+                    <form class="form-inline" method="POST">
                         <input class="form-control mr-sm-2" placeholder="Ім'я та номер мобільного">
                         <button class="btn btn-outline-light">
                             <img src="img/masks.png" alt="Театр" width="15" style="vertical-align: middle">Вперед
