--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <img src="img/zviyani.jpeg" class="d-block w-100" alt="Звіяні Голлівудом">
                             <div class="carousel-caption d-none d-md-block">
                                 <a href="zviyanihollywoodom.html" target="_blank">
-                                    <h2>Звіяні Голлівудом</h2>
+                                    <h2>ЗВІЯНІ ГОЛЛІВУДОМ</h2>
                                     <h3>Це дуже смішно. Це смішно до сліз.</h3>
                                 </a>
                             </div>
