--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h2>Про нас</h2>
             <div class="aboutus">
                 <div class="card mb-3">
-                    <img src="img/group.jpeg">
+                    <img src="img/group.jpeg" class="card-img-top">
                     <div class="card-body">
                         <p class="card-text" align="justify">Театр "Domus" заснувала кримчанка Наталія Меньшикова за допомогою багатьох людей, для яких розвиток мистецтва має велике значення. Перебуваючи у театрі, можна зануритися у чуже життя, а можна під іншим кутом побачити власне, заглянути в очі самому собі. Це й буде найголовніше диво театру, яке одні люди роблять для інших. Domus починав своє життя на Сихові і був там першим театром, але згодом переїхав у Палац Хоткевича у центрі. Відтепер у Львові буде не просто цікавий театр, це буде дім, в який зможе прийти кожен бажаючий!</p>
                         <p>Дізнайтесь про нас більше в наших соціальних мережах:</p>
