--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
+                            <img src="img/anons.jpeg" class="d-block w-100" alt="Анонс">
+                            <div class="carousel-caption d-none d-md-block">
+                                <a href="https://www.facebook.com/teatrdomus/events/?ref=page_internal" target="_blank">
+                                    <h2>ПРЕМ'ЄРА НЕЗАБАРОМ</h2>
+                                    <h3>Скучили за нами? Ми за вами теж!</h3>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
                             <img src="img/zviyani.jpeg" class="d-block w-100" alt="Звіяні Голлівудом">
                             <div class="carousel-caption d-none d-md-block">
                                 <a href="zviyanihollywoodom.html" target="_blank">
@@ -58,17 +67,8 @@
                             <img src="img/kazka.jpeg" class="d-block w-100" alt="Майстерня дурниць">
                             <div class="carousel-caption d-none d-md-block">
                                 <a href="maysternyadurnits.html" target="_blank">
-                                    <h2>Майстерня дурниць</h2>
+                                    <h2>МАЙСТЕРНЯ ДУРНИЦЬ</h2>
                                     <h3>У місті - мухозавр!</h3>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/macbeth.jpeg" class="d-block w-100" alt="Макбет">
-                            <div class="carousel-caption d-none d-md-block">
-                                <a href="macbeth.html" target="_blank">
-                                    <h2>Макбет</h2>
-                                    <h3>Перша англомовна вистава Театру Домус</h3>
                                 </a>
                             </div>
                         </div>
@@ -86,26 +86,26 @@
         </header>
         <main>
             <section id="aboutus">
-            <h2>Про нас</h2>
-            <div class="aboutus">
-                <div class="card mb-3">
-                    <img src="img/group.jpeg" class="card-img-top">
-                    <div class="card-body">
-                        <p class="card-text" align="justify">Театр "Domus" заснувала кримчанка Наталія Меньшикова за допомогою багатьох людей, для яких розвиток мистецтва має велике значення. Перебуваючи у театрі, можна зануритися у чуже життя, а можна під іншим кутом побачити власне, заглянути в очі самому собі. Це й буде найголовніше диво театру, яке одні люди роблять для інших. Domus починав своє життя на Сихові і був там першим театром, але згодом переїхав у Палац Хоткевича у центрі. Відтепер у Львові буде не просто цікавий театр, це буде дім, в який зможе прийти кожен бажаючий!</p>
-                        <p>Дізнайтесь про нас більше в наших соціальних мережах:</p>
-                        <div class="social-pages">
-                            <a href="https://www.facebook.com/teatrdomus/">
-                                <img src="img/facebook.png" alt="facebook" width="30">
-                            </a>
-                            <a href="https://www.instagram.com/theatrum_domus/">
-                                <img src="img/instagram.png" alt="instagram" width="30">
-                            </a>
-                            <a href="https://soundcloud.com/user-2462259/domus?fbclid=IwAR3cWlRI-2j1SMhQ7wBmFjNl9iwJNoVmlCmkqx2KSQxau_36yxWrOybolG0">
-                                <img src="img/soundcloud.png" alt="soundcloud" width="30">
-                            </a>
+                <h2>Про нас</h2>
+                <div class="aboutus">
+                    <div class="card mb-3">
+                        <img src="img/group.jpeg" class="card-img-top">
+                        <div class="card-body">
+                            <p class="card-text" align="justify">Театр "Domus" заснувала кримчанка Наталія Меньшикова за допомогою багатьох людей, для яких розвиток мистецтва має велике значення. Перебуваючи у театрі, можна зануритися у чуже життя, а можна під іншим кутом побачити власне, заглянути в очі самому собі. Це й буде найголовніше диво театру, яке одні люди роблять для інших. Domus починав своє життя на Сихові і був там першим театром, але згодом переїхав у Палац Хоткевича у центрі. Відтепер у Львові буде не просто цікавий театр, це буде дім, в який зможе прийти кожен бажаючий!</p>
+                            <p>Дізнайтесь про нас більше в наших соціальних мережах:</p>
+                            <div class="social-pages">
+                                <a href="https://www.facebook.com/teatrdomus/">
+                                    <img src="img/facebook.png" alt="facebook" width="30">
+                                </a>
+                                <a href="https://www.instagram.com/theatrum_domus/">
+                                    <img src="img/instagram.png" alt="instagram" width="30">
+                                </a>
+                                <a href="https://soundcloud.com/user-2462259/domus?fbclid=IwAR3cWlRI-2j1SMhQ7wBmFjNl9iwJNoVmlCmkqx2KSQxau_36yxWrOybolG0">
+                                    <img src="img/soundcloud.png" alt="soundcloud" width="30">
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>    
             </section>
             <section id="news">
                 <h2>Новини</h2>
@@ -336,28 +336,20 @@
                     <div class="col mb-4">
                         <div class="card border-light">
                             <div>
-                                <h4>
-                                    Львів, вул. Кушевича, 1
-                                </4>
-                                <h4>
-                                    095 930 1404
-                                </h4>
-                                <img src="img/white.jpeg" alt="white" width="300">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card border-light">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2572.493118392924!2d24.025492209201108!3d49.85198101863355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add0bdc8cac17%3A0x100ce23e84df4f8!2sHnat%20Khotkevych%20Palace%20of%20Culture!5e0!3m2!1sru!2sua!4v1605117874228!5m2!1sru!2sua" width="533" height="375" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                        </div>
-                    </div>
-            </section>
-        </main>
-        <footer>
-            <hr>
-            <p>Сopyright 2020 Theatre Domus</p>
-        </footer>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    </body>
-</html>
+                                <h4>Львів, вул. Кушевича, 1</4>
+                                <h4>095 930 1404</h4>
+<img src="img/white.jpeg" alt="white" width="300">
+</div></div></div>
+<div class="col">
+    <div class="card border-light">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2572.493118392924!2d24.025492209201108!3d49.85198101863355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add0bdc8cac17%3A0x100ce23e84df4f8!2sHnat%20Khotkevych%20Palace%20of%20Culture!5e0!3m2!1sru!2sua!4v1605117874228!5m2!1sru!2sua" width="533" height="375" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+</div>
+</section></main>
+<footer>
+    <hr>
+    <p>Сopyright 2020 Theatre Domus</p>
+</footer>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+</body></html>
